--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -170,15 +170,20 @@
           {% endif %}
         </ul>
         <p class="copyright text-muted">
-		  {{ site.author.name }}
-		  &nbsp;&bull;&nbsp;
-		  {{ site.time | date: '%Y' }}
+  		  {{ site.author.name }}
+  		  &nbsp;&bull;&nbsp;
+  		  {{ site.time | date: '%Y' }}
 
-		  {% if site.url-pretty %}
-		  &nbsp;&bull;&nbsp;
-		  <a href="{{ site.url }}">{{ site.url-pretty }}</a>
-		  {% endif %}
-	    </p>
+  		  {% if site.url-pretty %}
+  		  &nbsp;&bull;&nbsp;
+  		  <a href="{{ site.url }}">{{ site.url-pretty }}</a>
+  		  {% endif %}
+  	    </p>
+
+        <p class="copyright text-muted">
+        Партнёр <a href="https://archive.systems/ru/ ">ООО&nbsp;«Умный архив»</a>
+        </p>
+
 	        <!-- Please don't remove this, keep my open source work credited :) -->
 		<p class="theme-by text-muted">
 		  Theme by
